--- a/Day06/sprng-boot-app/pom.xml
+++ b/Day06/sprng-boot-app/pom.xml
@@ -28,6 +28,13 @@
       </dependency>
 
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+      <version>3.4.2</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
