--- a/Day08/patient-management-app/src/main/resources/application.properties
+++ b/Day08/patient-management-app/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=patient-management-app
+
+admin.user= admin1
+admin.passowrd= password1
+admin.role= DOCTOR
+
+user.user= user1
+user.passowrd= password1
+user.role= PATIENT
