--- a/Day10/spring-security/src/main/resources/application.properties
+++ b/Day10/spring-security/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=spring-security
 
 admin.user= admin1
-admin.passowrd= password1
+admin.password= password1
 admin.role= ADMIN
 
 user.user= user1
-user.passowrd= password1
+user.password= password1
 user.role= USER
