--- a/Day15/student-management-app/school-operation/pom.xml
+++ b/Day15/student-management-app/school-operation/pom.xml
@@ -12,6 +12,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>school-operation</name>
 	<description>Demo project for Spring Boot</description>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
