--- a/Day15/student-management-app/school-operation/src/main/resources/application.properties
+++ b/Day15/student-management-app/school-operation/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=school-operation
+server.port=10082
+
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
