--- a/Day15/student-management-app/student-app/src/main/resources/application.properties
+++ b/Day15/student-management-app/student-app/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=student-app
+server.port=10081
+
+get.receive.url=http://localhost:10082/school/read
+post.receive.url=http://localhost:10082/school/save
+put.receive.url=http://localhost:10082/school/update
+delete.receive.url=http://localhost:10082/school/delete
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+
