appln and AwsConfig updated

--- a/Day022/digital-parking-system/car-parking-process/src/main/resources/application.properties
+++ b/Day022/digital-parking-system/car-parking-process/src/main/resources/application.properties
@@ -2,13 +2,14 @@ spring.application.name=car-parking-process
 server.port=8081
 
 # AWS Configuration
-aws.region=eu-west-1
+aws.region=us-east-1
 aws.dynamodb.table-name=ParkingTable
 aws.sqs.parking-start-request=http://localhost:4566/000000000000/parking-start-request
 aws.sqs.parking-end-request=http://localhost:4566/000000000000/parking-end-request
 aws.sqs.parking-end-response=http://localhost:4566/000000000000/parking-end-response
 
 # Spring Cloud AWS Configuration for LocalStack
-spring.cloud.aws.endpoint=http://localhost:4566
-spring.cloud.aws.credentials.access-key=test
-spring.cloud.aws.credentials.secret-key=test
+#spring.cloud.aws.endpoint=http://localhost:4566
+#spring.cloud.aws.credentials.access-key=test
+#spring.cloud.aws.credentials.secret-key=test
+spring.profiles.active=localstack
