--- a/Day022/digital-parking-system/car-parking-registration/src/main/resources/application.properties
+++ b/Day022/digital-parking-system/car-parking-registration/src/main/resources/application.properties
@@ -2,12 +2,13 @@ spring.application.name=car-parking-registration
 server.port=8080
 
 # AWS Configuration
-aws.region=eu-west-1
+aws.region=US_EAST_1
+spring.profiles.active=localstack
 aws.sqs.parking-start-request=http://localhost:4566/000000000000/parking-start-request
 aws.sqs.parking-end-request=http://localhost:4566/000000000000/parking-end-request
 
 # Spring Cloud AWS Configuration for LocalStack
-spring.cloud.aws.endpoint=http://localhost:4566
+#spring.cloud.aws.endpoint=http://localhost:4566
 #spring.cloud.aws.credentials.access-key=test
 #spring.cloud.aws.credentials.secret-key=test
 
