appln and AwsConfig updated

--- a/Day022/digital-parking-system/car-parking-process/src/main/resources/application.properties
+++ b/Day022/digital-parking-system/car-parking-process/src/main/resources/application.properties
@@ -2,14 +2,16 @@ spring.application.name=car-parking-process
 server.port=8081
 
 # AWS Configuration
-aws.region=us-east-1
-aws.dynamodb.table-name=ParkingTable
+aws.dynamodb.table-name=ParkingRecords
 aws.sqs.parking-start-request=http://localhost:4566/000000000000/parking-start-request
 aws.sqs.parking-end-request=http://localhost:4566/000000000000/parking-end-request
 aws.sqs.parking-end-response=http://localhost:4566/000000000000/parking-end-response
 
-# Spring Cloud AWS Configuration for LocalStack
-#spring.cloud.aws.endpoint=http://localhost:4566
-#spring.cloud.aws.credentials.access-key=test
-#spring.cloud.aws.credentials.secret-key=test
+# Define the active profile for Spring
 spring.profiles.active=localstack
+
+# AWS credentials and region for LocalStack
+aws.accessKeyId=test
+aws.secretAccessKey=test
+aws.region=us-east-1
+aws.endpoint=http://localhost:4566
