--- a/Day022/digital-parking-system/car-parking-registration/src/main/resources/application.properties
+++ b/Day022/digital-parking-system/car-parking-registration/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 spring.application.name=car-parking-registration
-server.port=8080
+server.port=9090
 
-# AWS Configuration
-aws.region=US_EAST_1
+# Define the active profile for Spring
 spring.profiles.active=localstack
-aws.sqs.parking-start-request=http://localhost:4566/000000000000/parking-start-request
-aws.sqs.parking-end-request=http://localhost:4566/000000000000/parking-end-request
 
-# Spring Cloud AWS Configuration for LocalStack
-#spring.cloud.aws.endpoint=http://localhost:4566
-#spring.cloud.aws.credentials.access-key=test
-#spring.cloud.aws.credentials.secret-key=test
+# AWS credentials and region for LocalStack
+aws.accessKeyId=test
+aws.secretAccessKey=test
+aws.region=us-east-1
+aws.endpoint=http://localhost:4566
 
-#spring.autoconfigure.exclude=org.springframework.cloud.aws.autoconfigure.context.ContextInstanceDataAutoConfiguration,org.springframework.cloud.aws.autoconfigure.context.ContextStackAutoConfiguration,org.springframework.cloud.aws.autoconfigure.context.ContextRegionProviderAutoConfiguration
-
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
