--- a/Day22/digital-parking-system/car-parking-process/src/main/resources/application.properties
+++ b/Day22/digital-parking-system/car-parking-process/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=car-parking-process
 server.port=8081
-aws.endpoint=http://localhost:4566
-amazon.aws.dynamodb.parking.table=digital-parking-system
-
 
 # Exchange
 rabbitmq.exchange.name = parking.exchange
+
+# mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/parking
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # Queues
 rabbitmq.start.request.queue.name = parking-start-request
@@ -19,16 +23,10 @@ rabbitmq.start.response.routingkey.name = start.response.routingkey
 rabbitmq.end.request.routingkey.name = end.request.routingkey
 rabbitmq.end.response.routingkey.name = end.response.routingkey
 
-# RabbitMQ Connection
+# RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-#spring.datasource.url=jdbc:mysql://mysql:3306/parking
-spring.datasource.url=jdbc:mysql://localhost:3306/parking
-spring.datasource.username=user
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
