--- a/Day22/digital-parking-system/car-parking-registration/src/main/resources/application.properties
+++ b/Day22/digital-parking-system/car-parking-registration/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 spring.application.name=car-parking-registration
 server.port=8082
 
-#localstalk port from the will use dynamoDB
-aws.endpoint=http://localhost:4566
-
-#Table name
-amazon.aws.dynamodb.parking.table=digital-parking-system
-
 # Parking Start Queues
 rabbitmq.start.request.queue.name = parking-start-request
 rabbitmq.start.response.queue.name = parking-start-response
@@ -21,18 +15,17 @@ rabbitmq.exchange.name = parking.exchange
 # Routing Keys
 rabbitmq.start.request.routingkey.name = start.routingkey
 rabbitmq.start.response.routingkey.name = start.response.routingkey
-
 rabbitmq.end.request.routingkey.name = end.routingkey
 rabbitmq.end.response.routingkey.name = end.response.routingkey
 
 
-# RabbitMQ Connection Properties
+# RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-#spring.datasource.url=jdbc:mysql://mysql:3306/parking
+# mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/parking
 spring.datasource.username=user
 spring.datasource.password=password
